cargo-features=["edition2021"]

[package]
name = "themelio-stf"
version = "0.11.13"
authors = ["Themelio Labs"]
edition = "2021"

description = "Core state-transition function and data structures for Themelio"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/themelio-stf"

[dependencies.arbitrary]
version = "1.0.3"
features = ["derive"]

[dependencies.genawaiter]
version = "0.99.1"
default-features = false
features = []

# [dependencies.imbl]
# version = "1.0.1"
# features = ["serde"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies]
catvec = "0.1.6"
dashmap = {version = "4", features = ["rayon"]}
defmac = "0.2.1"
derive_more = "0.99.17" 
ethnum = "1.0.4"
hex = "0.4.3"
log = "0.4.14" 
num = "0.4.0"
num_enum = "0.5.6"
novasmt = "0.2.18"  
parking_lot = "0.11.2"
melpow="0.1.0"
rayon = "1.5.1"
rustc-hash = "1.1.0"
scopeguard = "1.1.0"
serde_repr = "0.1.7"
smallvec = {version = "1.8.0", features = ["const_generics"]}
stdcode = "0.1.7" 
tap = "1.0.1"
thiserror = "1.0.30"
tmelcrypt = "0.2.4"
derivative = "2.2.0"
themelio-structs= "0.3.0-beta.3"
once_cell="1"
blake3 = "1.3.1"
assoc = "0.1.2"
atomic_float = "0.1.0"
fastrand = "1.7.0"
serde_with = "1"
bytes = { version = "1.2.1", features = ["serde"] }

[target.'cfg(fuzzing)'.dependencies]
honggfuzz = "0.5.54"
env_logger = "0.9.0"
jemallocator = "0.3.2"

[dev-dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
logos = "0.12.0"
rand = "0.8.4"
criterion = "0.3.5"
quanta = "0.9.3"
ordered-float="1"
env_logger = "0.9.0"
meshanina="0.3.15"
argh = "0.1.9"
anyhow = "1.0.66"
stdcode = "0.1.7"
serde_yaml = "0.9.14"
dirs = "4.0.0"

[[bench]]
name = "apply_tx"
harness = false

[features]
print = []

[profile.release-dbg]
inherits = "release"
debug=2
codegen-units=32

[[example]]
name = "replay_history"
path = "examples/replay_history.rs"

[[example]]
name = "melvm_cost_fuzz"
path = "examples/melvm_cost_fuzz.rs"

[[example]]
name = "stfbench"
path = "examples/stfbench.rs"
