[package]
name = "tip911-stakeset"
version = "0.0.2"
edition = "2021"
description = "utility crate that keeps track of a bunch of Mel stakes"
repository="https://github.com/mel-project/melstf"
license="MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imbl = "2.0.0"
# novasmt = { git = "https://github.com/themeliolabs/novasmt", branch = "tip-911"}
stdcode = "0.1.13"

tmelcrypt = "0.2.6"
# themelio-structs= "0.3.1"
melstructs = "0.3.1"
novasmt = "0.2.19"
 